Fix Spring Security and CORS configuration