@@ -1,285 +1,173 @@
 package com.loanguard.backend.config;
 
-import com.loanguard.backend.repository.UserRepository;
-import com.loanguard.backend.security.JwtAuthenticationFilter;
+import java.util.Arrays;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import org.springframework.http.HttpMethod;
 
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 
 import org.springframework.security.config.http.SessionCreationPolicy;
 
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
-
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
 
 @Configuration
-@EnableMethodSecurity
+@EnableWebSecurity
 public class SecurityConfig {
-
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final UserRepository userRepository;
-
-    public SecurityConfig(
-            JwtAuthenticationFilter jwtAuthenticationFilter,
-            UserRepository userRepository
-    ) {
-        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-        this.userRepository = userRepository;
-    }
-
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-
-    @Bean
-    public UserDetailsService userDetailsService() {
-
-        return username -> userRepository
-                .findByEmail(username.trim().toLowerCase())
-
-                .map(user ->
-                        org.springframework.security.core.userdetails.User
-                                .withUsername(user.getEmail())
-                                .password(user.getPassword())
-                                .roles(user.getRole().name())
-                                .disabled(!user.isEnabled())
-                                .build()
-                )
-
-                .orElseThrow(() ->
-                        new UsernameNotFoundException(
-                                "User not found: " + username
-                        )
-                );
-    }
-
-
-    @Bean
-    public AuthenticationProvider authenticationProvider(
-            UserDetailsService userDetailsService,
-            PasswordEncoder passwordEncoder
-    ) {
-
-        DaoAuthenticationProvider provider =
-                new DaoAuthenticationProvider(
-                        userDetailsService
-                );
-
-        provider.setPasswordEncoder(passwordEncoder);
-
-        return provider;
-    }
-
-
-    @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration configuration
-    ) throws Exception {
-
-        return configuration.getAuthenticationManager();
-    }
-
 
     @Bean
     public SecurityFilterChain securityFilterChain(
-            HttpSecurity http,
-            AuthenticationProvider authenticationProvider
+            HttpSecurity http
     ) throws Exception {
 
         http
 
-                // Enable CORS
-                .cors(cors -> cors
-                        .configurationSource(
-                                corsConfigurationSource()
-                        )
-                )
+            // Disable CSRF because this is a REST API using JWT/token authentication
+            .csrf(csrf -> csrf.disable())
 
-                // Disable CSRF because this is a stateless JWT API
-                .csrf(csrf -> csrf.disable())
+            // Enable CORS
+            .cors(Customizer.withDefaults())
 
-                // Stateless JWT authentication
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(
-                                SessionCreationPolicy.STATELESS
-                        )
-                )
+            // Stateless API
+            .sessionManagement(session ->
+                    session.sessionCreationPolicy(
+                            SessionCreationPolicy.STATELESS
+                    )
+            )
 
-                // Authentication provider
-                .authenticationProvider(
-                        authenticationProvider
-                )
+            // Authorization rules
+            .authorizeHttpRequests(auth -> auth
 
-                // Authorization rules
-                .authorizeHttpRequests(auth -> auth
+                    // Allow browser preflight requests
+                    .requestMatchers(HttpMethod.OPTIONS, "/**")
+                    .permitAll()
 
-                        // IMPORTANT:
-                        // Allow all CORS preflight requests.
-                        .requestMatchers(
-                                HttpMethod.OPTIONS,
-                                "/**"
-                        ).permitAll()
+                    // Allow authentication endpoints
+                    .requestMatchers("/api/auth/**")
+                    .permitAll()
 
-                        // Authentication APIs
-                        .requestMatchers(
-                                "/api/auth/**"
-                        ).permitAll()
+                    // Allow health checks
+                    .requestMatchers(
+                            "/",
+                            "/health",
+                            "/actuator/**"
+                    )
+                    .permitAll()
 
-                        // Reviewer APIs
-                        .requestMatchers(
-                                "/api/reviewer/**"
-                        ).hasAnyRole(
-                                "ADMIN",
-                                "REVIEWER"
-                        )
+                    /*
+                     * TEMPORARILY allow Loan API.
+                     *
+                     * This ensures your frontend can access
+                     * /api/loans without Spring Security blocking it.
+                     */
+                    .requestMatchers("/api/loans/**")
+                    .permitAll()
 
-                        // Risk APIs
-                        .requestMatchers(
-                                "/api/risk/**"
-                        ).hasAnyRole(
-                                "ADMIN",
-                                "REVIEWER",
-                                "ANALYST"
-                        )
+                    // Allow other API endpoints for now
+                    .requestMatchers("/api/**")
+                    .permitAll()
 
-                        // Audit APIs
-                        .requestMatchers(
-                                "/api/audit/**"
-                        ).hasAnyRole(
-                                "ADMIN",
-                                "REVIEWER",
-                                "ANALYST"
-                        )
-
-                        // Delete loans
-                        .requestMatchers(
-                                HttpMethod.DELETE,
-                                "/api/loans/**"
-                        ).hasRole("ADMIN")
-
-                        // Read loans
-                        .requestMatchers(
-                                HttpMethod.GET,
-                                "/api/loans/**"
-                        ).hasAnyRole(
-                                "ADMIN",
-                                "REVIEWER",
-                                "ANALYST"
-                        )
-
-                        // Create and process loans
-                        .requestMatchers(
-                                HttpMethod.POST,
-                                "/api/loans/**"
-                        ).hasAnyRole(
-                                "ADMIN",
-                                "REVIEWER"
-                        )
-
-                        // Update loans
-                        .requestMatchers(
-                                HttpMethod.PUT,
-                                "/api/loans/**"
-                        ).hasAnyRole(
-                                "ADMIN",
-                                "REVIEWER"
-                        )
-
-                        // Everything else requires authentication
-                        .anyRequest()
-                        .authenticated()
-                )
-
-                // JWT filter
-                .addFilterBefore(
-                        jwtAuthenticationFilter,
-                        UsernamePasswordAuthenticationFilter.class
-                );
+                    // Everything else requires authentication
+                    .anyRequest()
+                    .authenticated()
+            );
 
         return http.build();
     }
 
 
-    /**
-     * GLOBAL CORS CONFIGURATION
-     *
-     * IMPORTANT:
-     * Origins must be plain URLs.
-     * DO NOT use Markdown links here.
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
 
         CorsConfiguration configuration =
                 new CorsConfiguration();
 
-        configuration.setAllowedOrigins(
-                List.of(
-                        "https://loan-guard-ai-five.vercel.app",
-                        "http://localhost:5173"
-                )
-        );
+        /*
+         * Your Vercel Frontend URLs
+         */
+        configuration.setAllowedOrigins(Arrays.asList(
 
-        configuration.setAllowedMethods(
-                List.of(
-                        "GET",
-                        "POST",
-                        "PUT",
-                        "DELETE",
-                        "PATCH",
-                        "OPTIONS"
-                )
-        );
+                "https://loan-guard-ai-five.vercel.app",
 
-        configuration.setAllowedHeaders(
-                List.of(
-                        "Authorization",
-                        "Content-Type",
-                        "Accept"
-                )
-        );
+                "https://loan-guard-ai.vercel.app",
 
-        configuration.setExposedHeaders(
-                List.of(
-                        "Authorization"
-                )
-        );
+                "http://localhost:5173",
 
-        // JWT is sent in Authorization header.
-        // Cookies are not used.
-        configuration.setAllowCredentials(false);
+                "http://localhost:3000"
+        ));
 
-        configuration.setMaxAge(3600L);
 
+        /*
+         * Allowed HTTP Methods
+         */
+        configuration.setAllowedMethods(Arrays.asList(
+
+                "GET",
+
+                "POST",
+
+                "PUT",
+
+                "DELETE",
+
+                "PATCH",
+
+                "OPTIONS"
+        ));
+
+
+        /*
+         * Allowed Headers
+         */
+        configuration.setAllowedHeaders(Arrays.asList(
+
+                "Authorization",
+
+                "Content-Type",
+
+                "Accept",
+
+                "Origin",
+
+                "X-Requested-With"
+        ));
+
+
+        /*
+         * Headers exposed to frontend
+         */
+        configuration.setExposedHeaders(Arrays.asList(
+
+                "Authorization"
+        ));
+
+
+        /*
+         * JWT authentication may require credentials.
+         */
+        configuration.setAllowCredentials(true);
+
+
+        /*
+         * Apply CORS configuration to every endpoint.
+         */
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
 
         source.registerCorsConfiguration(
+
                 "/**",
+
                 configuration
         );
 
